fixed layout and scroll overflow

--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -1,34 +1,41 @@
 
 /* main container */
 .gallery-wrap{
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-auto-rows: 300px;
+    gap: 20px;
+
     padding: 50px;
-    column-count: 4;
-    column-width: 70%;
-    row-gap: 10px;
-    column-gap: 10px;
 }
+
+body.modal-open {
+    overflow: hidden;
+  }
 
 /* simgle image container */
 .thumbnail{
     width: 100%;
-    margin-bottom: 10px;
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
 }
 
 /* image thumbnail */
 .thumbnail img{
-    max-height: 60%;
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: 50% 50%;
     transition: all 0.4s ease;
-    border-radius: 10px;
+
 }
 
 /* image thumbnail cover */
 .thumbnail img:hover{
-    transform: scale(1.02);
+    transform: scale(1.1);
     transition: all 0.4s ease;
 }
-
-
 
 /* full screen */
 
@@ -103,11 +110,6 @@
     border-radius: 10px;
 }
 
-
-
-
-
-
 .galleryTitle{
     width: fit-content;
     margin: auto;
@@ -131,14 +133,61 @@
     cursor: pointer;
 }
 
+.loader{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
 
-
+.custom-loader {
+    width: 40px;
+    height: 40px;
+    --c: linear-gradient(#F4F4F4 0 0);
+    --r1: radial-gradient(farthest-side at bottom,#F4F4F4 93%,#0000);
+    --r2: radial-gradient(farthest-side at top   ,#F4F4F4 93%,#0000);
+    background: 
+      var(--c) ,
+      var(--r1),
+      var(--r2),
+      var(--c) ,  
+      var(--r1),
+      var(--r2),
+      var(--c) ,
+      var(--r1),
+      var(--r2);
+    background-repeat: no-repeat;
+    animation: db2 0.8s infinite alternate;
+  }
+  
+  @keyframes db2 {
+    0%,25% {
+      background-size: 8px 0,8px 4px,8px 4px,8px 0,8px 4px,8px 4px,8px 0,8px 4px,8px 4px;
+      background-position: 0 50%,0 calc(50% - 2px),0 calc(50% + 2px),50% 50%,50% calc(50% - 2px),50% calc(50% + 2px),100% 50%,100% calc(50% - 2px),100% calc(50% + 2px);
+   }
+   50% {
+      background-size: 8px 100%,8px 4px,8px 4px,8px 0,8px 4px,8px 4px,8px 0,8px 4px,8px 4px;
+      background-position: 0 50%,0 calc(0% - 2px),0 calc(100% + 2px),50% 50%,50% calc(50% - 2px),50% calc(50% + 2px),100% 50%,100% calc(50% - 2px),100% calc(50% + 2px);
+   }
+   75% {
+      background-size: 8px 100%,8px 4px,8px 4px,8px 100%,8px 4px,8px 4px,8px 0,8px 4px,8px 4px;
+      background-position: 0 50%,0 calc(0% - 2px),0 calc(100% + 2px),50% 50%,50% calc(0% - 2px),50% calc(100% + 2px),100% 50%,100% calc(50% - 2px),100% calc(50% + 2px);
+   }
+   95%,100% {
+      background-size: 8px 100%,8px 4px, 8px 4px,8px 100%,8px 4px,8px 4px,8px 100%,8px 4px,8px 4px;
+      background-position: 0 50%,0 calc(0% - 2px),0 calc(100% + 2px),50% 50%,50% calc(0% - 2px),50% calc(100% + 2px),100% 50%,100% calc(0% - 2px),100% calc(100% + 2px);
+   }
+  }
 
 
 @media (max-width:1200px) {
     .gallery-wrap{
-        column-count: 2;
-        padding: 20px;
+        grid-template-columns: repeat(2, auto);
+        grid-auto-rows: 150px;
+        gap: 10px;
+        padding-top:30px;
+        padding-left: 15px;
+        padding-right: 15px;
     }
     .fullScreenImage{
         width: 95%;
